Saves the prices with prime

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "hero_salva",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
   },
   "author": "",
   "license": "ISC",
