--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
+    "proxy-lists": "^1.12.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   }
