--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "6.11.1",
+    "node": "0.6.22 || 0.8.x",
     "npm": "3.10.9"
   },
   "author": "",
