--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "0.6.22 || 0.8.x",
-    "npm": "3.10.9"
+    "node": "6.11.1"
   },
   "author": "",
   "license": "ISC",
